--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+body {
+  font-family: 'Roboto', sans-serif;
+}
+a {
+  color: #0a0a0a;
+}
+
 /*NAVBAR*/
 
 .topbar-responsive {
@@ -127,6 +135,8 @@
             animation: fadeIn 1s ease-in;
   }
 }
+
+
 /*INDEX*/
 .background-img {
 	background: url("../img/cro-stadion.jpg");
