--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@ body {
   background-image: url("../img/blue-white.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  overflow-x: hidden;
 }
 a {
   color: #0a0a0a;
@@ -132,7 +133,7 @@ footer a {
 .contact-text h2 {
   font-weight: bold;
 }
-.white {
+.blue {
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
@@ -157,31 +158,84 @@ footer a {
 .callout {
   margin: 0 0 0 0;
 }
-/*Sidebar*/
-.side-nav{
-  height: 100%;
-  background-color:#20242D;
-  padding-top:60px;
-}
-.side-nav a{
-  padding:10px 10px 10px 30px;
-  text-decoration:none;
-  font-size:22px;
-  color:#ccc;
-  transition:0.3s;
-}
-.side-nav a:hover{
-  color:#fff;
-}
-#dashboard-main{
-  padding:20px;
-}
-#side-menu > ul > li{
-  padding: 0.7rem 1rem;
-}
-/*CLUB-INDEX*/
 .fa-trash {
   color: red;
+}
+/*Sidebar*/
+.navbar{
+    background-color:#3b5998;
+    overflow:hidden;
+    height:63px;
+  }
+
+  .navbar a{
+    float:left;
+    display:block;
+    color:#f2f2f2;
+    text-align:center;
+    padding:14px 16px;
+    text-decoration:none;
+    font-size:17px;
+  }
+
+  .navbar ul{
+    margin:8px 0 0 0;
+    list-style:none;
+  }
+
+  .navbar a:hover{
+    background-color:#ddd;
+    color:#000;
+  }
+
+  .side-nav{
+    height:100%;
+    width:0;
+    position:fixed;
+    z-index:1;
+    top:0;
+    left:0;
+    background-color:#111;
+    opacity:0.9;
+    overflow-x:hidden;
+    padding-top:60px;
+    transition:0.5s;
+  }
+
+  .side-nav a{
+    padding:10px 10px 10px 30px;
+    text-decoration:none;
+    font-size:22px;
+    color:#ccc;
+    display:block;
+    transition:0.3s;
+  }
+
+  .side-nav a:hover{
+    color:#fff;
+  }
+
+  .side-nav .btn-close{
+    position:absolute;
+    top:0;
+    right:22px;
+    font-size:36px;
+    margin-left:50px;
+  }
+
+  #main{
+    transition:margin-left 0.5s;
+    padding:20px;
+    overflow:hidden;
+    
+  }
+
+  @media(max-width:568px){
+    .navbar-nav{display:none}
+  }
+
+.responsive-card-table td, .responsive-card-table th, .responsive-card-table tr {
+  border: 0px;
 }
 
 
