--- a/css/responsive-tables.css
+++ b/css/responsive-tables.css
@@ -1,3 +1,4 @@
+
 .responsive-card-table {
 	border-collapse: collapse;
   }
@@ -13,6 +14,7 @@
   .responsive-card-table tr,
   .responsive-card-table th,
   .responsive-card-table td {
+	border: 1px solid #0a0a0a;
 	color:black;
   }
   
