--- a/css/app.css
+++ b/css/app.css
@@ -10,10 +10,6 @@ body {
 a {
   color: #0a0a0a;
 }
-footer {
-  background-color: #20242D;
-  color: white;
-}
 footer a {
   color: #fff;
 }
@@ -88,6 +84,10 @@ footer a {
 	height: 100vh;
 }
 
+/*FOOTER*/
+.footer-info {
+  background: #20242D;
+}
 /*LOGIN*/
 .alert-box {
   padding-right: 3.25rem;
@@ -153,7 +153,7 @@ footer a {
   PRIVATE
 */
 .button {
-  margin: 0 0 0 0;
+  margin: 0 0 1rem 0;
 }
 .callout {
   margin: 0 0 0 0;
