--- a/css/app.css
+++ b/css/app.css
@@ -13,16 +13,38 @@ a {
 footer a {
   color: #fff;
 }
-.logo, .logo-text {
+.logo {
   display: flex;
-  justify-content: center;
   align-items: center;
+}
+.logo-image {
+    padding: 0 20px;
+}
+.logo-image div {
+    width: 100px;
+    height: 100px;
+}
+.logo-title {
+    line-height: 0.94;
+    color: #0000ff;
+    font-size: 34px;
+    font-weight: 500;
+    text-align: left;
+    margin: 0;
+}
+.logo-sub {
+    font-size: 24px;
+    font-weight: 500;
+    color: #4c4c4c;
+    margin-top: 5px;
 }
 
 /*NAVBAR*/
 .top-bar{
   justify-content: center;
-  height: 82px;
+}
+.top-bar, .top-bar ul {
+    background-color: #06070a;
 }
 #main-menu > div {
   width: 100%;
@@ -34,11 +56,11 @@ footer a {
   padding: 7px 10px;
   font-size: 20px;
   text-transform: uppercase;
-  color: #0a393d;
+  color: #C0C0C0;
   position: relative;
   transition: all 0.3s ease 0s;
 }
-.link:hover{ color: #0a393d; }
+.link:hover{ color: #C0C0C0; }
 .link:before,
 .link:after{
   content: "";
@@ -84,6 +106,13 @@ footer a {
 	background-position: center;
 	width: 100%;
 	height: 100vh;
+}
+.counter {
+  padding: 50px 0;
+}
+.counter-box div {
+  width: 100px;
+  height: 100px;
 }
 
 /*FOOTER*/
@@ -154,15 +183,28 @@ footer a {
   font-weight: bold;
   color: #0000ff;
 }
-#googleMap {
-  margin-bottom: 30px;
+.info-details {
+    display: flex;
+    padding: 15px;
+    align-items: center;
 }
-.contact-info {
-  list-style-type: none;
+.info-icon {
+    padding: 15px;
 }
-.contact-info li a:hover {
-  color: #000;
-  background-color: #e6e6e6;
+.info-details .info-desc h3 {
+    margin-bottom: 5px;
+    font-size: 18px;
+}
+.info-details .info-desc p {
+    margin: 0px;
+}
+.contact-us-form input[type=text],
+.contact-us-form input[type=email],
+.contact-us-form textarea {
+  margin-bottom: 1.5rem;
+}
+.contact-form, .contact-text {
+  padding: 25px;
 }
 /*
   PRIVATE
